# py-peglib

./: .gitignore  CMakeLists.txt  LICENCE  README.md  setup.py
.github/workflows/: build.yml
src/py_peglib/: info.cpp  info.cpp.in  info.hpp  lib.cpp  parser.cpp  parser.hpp  semantic_values.cpp  semantic_values.hpp
tests/: 00_loading.py  01_simple.py  python.sh  run-all.sh
